--- a/About/index.html
+++ b/About/index.html
@@ -60,7 +60,7 @@
       <div class="container content">
         <div class="row justify-center">
           <article class="col-lg-8 col-md-10 col-12">
-            <p>I am Azim Pulat, a <strong>Software Engineer at Google</strong> from Uzbekistan, currently living in Warsaw, Poland.</p>
+            <p>I am Abdulvaliy Saidalikhonov, a <strong>Software Engineer at Google</strong> from Uzbekistan, currently living in California, USA.</p>
               <p>I am always contributing to developer events by giving a talk or as a mentor, especially the ones that engage women in tech. As a developer, I really want to see more diversity in the industry. </p>
               <figure><div class="figure_wrapper"><img src="/media/2020/04/12/djangogirls.jpg"></div><figcaption>DjangoGirls, Tashkent</figcaption></figure>
 
