big change second

--- a/About/index.html
+++ b/About/index.html
@@ -10,7 +10,7 @@
     <meta property="og:site_name" content="Abdulvaliy's Blog"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <meta name="description" content="I am Abdulvaliy Saidalikhonov, a Software Engineer at Google from Uzbekistan, currently living in Warsaw, Poland.">
+    <meta name="description" content="I am Abdulvaliy Saidalikhonov, a Cybersecurity specialist at Google from Uzbekistan, currently living in Warsaw, Poland.">
     <meta name="og:image" content="https://azimjon.com/media/2020/04/12/lazyprogrammer.jpg">
 
 
@@ -33,7 +33,7 @@
             <ul class="nav align-items-center">
                 <!-- <li><a class="list-item" href="https://42.uz">42</a></li> -->
                 <li><a class="list-item" href="/blog/">Blog</a></li>
-                <li><a class="list-item" href="/articles/">Articles</a></li>
+                <li><a class="list-item" href="/talks/">Talks</a></li>
                 <li><a class="list-item" href="https://t.me/s/lazyprogrammer1" target="_blank">Channel</a></li>
             </ul>
             <div class="burger-menu">
@@ -60,7 +60,7 @@
       <div class="container content">
         <div class="row justify-center">
           <article class="col-lg-8 col-md-10 col-12">
-            <p>I am Abdulvaliy Saidalikhonov, a <strong>Software Engineer at Google</strong> from Uzbekistan, currently living in California, USA.</p>
+            <p>I am Abdulvaliy Saidalikhonov, a <strong>Cybersecurity specialist at Google</strong> from Uzbekistan, currently living in California, USA.</p>
               <p>I am always contributing to developer events by giving a talk or as a mentor, especially the ones that engage women in tech. As a developer, I really want to see more diversity in the industry. </p>
               <figure><div class="figure_wrapper"><img src="/media/2020/04/12/djangogirls.jpg"></div><figcaption>DjangoGirls, Tashkent</figcaption></figure>
 
@@ -71,7 +71,7 @@
               <p>I am also known as "<strong>lazy programmer</strong>", very handy nature for programmers. I love repetitive tasks, I see them as an opportunity for automation. Also, whenever I am not working standing, you find me working laying on a sofa.</p>
               <figure><div class="figure_wrapper"><img src="/media/2020/04/12/lazyprogrammer.jpg"></div><figcaption>GroundZero Chilanzar, Tashkent</figcaption></figure>
             
-              <p>In short, it's me, Azimjon, a friendly programmer from Uzbekistan. You can read my story of becoming a software engineer <a href="https://azimjon.com/blog/my-journey-of-becoming-a-software-engineer/" target="_blank">here</a>.</p>
+              <p>In short, it's me, Abdulvaliy, a friendly programmer from Uzbekistan. You can read my story of becoming a cybersecurity specialist <a href="https://azimjon.com/blog/my-journey-of-becoming-a-software-engineer/" target="_blank">here</a>.</p>
           </article>
         </div>
       </div>
