--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:site_name" content="Abdulvaliy's Blog"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <meta name="description" content="I am Abdulvaliy Saidalikhonov, a Software Engineer at Google from Uzbekistan, currently living in Warsaw, Poland.">
+    <meta name="description" content="I am Abdulvaliy Saidalikhonov, a Cybersecurity specialist at Google from Uzbekistan, currently living in Warsaw, Poland.">
     <meta name="og:image" content="https://azimjon.com/static/assets/images/azimjon.jpg">
 
 
@@ -33,7 +33,7 @@
             <ul class="nav align-items-center">
                 <!-- <li><a class="list-item" href="https://42.uz">42</a></li> -->
                 <li><a class="list-item" href="/blog/">Blog</a></li>
-                <li><a class="list-item" href="/articles/">Articles</a></li>
+                <li><a class="list-item" href="/talks/">Talks</a></li>
                 <li><a class="list-item" href="https://t.me/s/lazyprogrammer1" target="_blank">Channel</a></li>
             </ul>
             <div class="burger-menu">
