--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
                 <div class="col-xl-8 col-lg-10 col-12 stagger-animation">
                     <div class="about flex align-items-center">
                         <img class="anim-item profile-picture
-                                align-self-start" src="/images/azimjon.jpg" alt="Azimjon" />
+                                align-self-start" src="/images/icons/hello-larger.png" alt="Abdulvaliy" />
                         <div class="about-detail anim-item">
-                            <h1 class="title">Abdulvaliy Saidalikhonov</h1>
-                            <h3 class="desc">Software Engineer at Google</h3>
+                            <h1 class="title">Abdulvaliy</h1>
+                            <h1 class="title">Saidalikhonov</h1>
+                            <h3 class="desc">Cybersecurity specialist at <span class="g1">G</span><span class="o1">O</span><span class="o2">O</span><span class="g2">G</span><span class="l">L</span><span class="e">E</span></h3>
                             <div class="social-links flex
                                     align-items-center">
                                 <a class="icon-youtube" target="_blank" href="https://www.youtube.com/@azim">
