--- a/index.html
+++ b/index.html
@@ -54,24 +54,23 @@
                 <div class="col-xl-8 col-lg-10 col-12 stagger-animation">
                     <div class="about flex align-items-center">
                         <img class="anim-item profile-picture
-                                align-self-start" src="/images/icons/hello-larger.png" alt="Abdulvaliy" />
+                                align-self-start" src="/images/azimjon.jpg" alt="Abdulvaliy" />
                         <div class="about-detail anim-item">
-                            <h1 class="title">Abdulvaliy</h1>
-                            <h1 class="title">Saidalikhonov</h1>
-                            <h3 class="desc">Cybersecurity specialist at <span class="g1">G</span><span class="o1">O</span><span class="o2">O</span><span class="g2">G</span><span class="l">L</span><span class="e">E</span></h3>
+                            <h1 class="title">Abdulvaliy Saidalikhonov</h1>
+                            <h3 class="desc">Cybersecurity specialist at Google</h3>
                             <div class="social-links flex
                                     align-items-center">
-                                <a class="icon-youtube" target="_blank" href="https://www.youtube.com/@azim">
+                                <a class="icon-youtube" target="_blank" href="https://ww.youtube.com/@azim">
                                     <img src="/images/icons/youtube.svg" width="26" />
                                 </a>
-                                <!-- <a class="icon-github" target="_blank" href="https://github.com/Abdulvaliy10">
-                                    <img src="/images/icons/github.svg" width="22" />
-                                </a> -->
+                                <a href="https://github.com/Abdulvaliy10" class="icon-github">
+                                    <img src="/images/icons/githubb.svg" alt="Github icon">
+                                </a>
                                 <a class="icon-linkedin" target="_blank" href="https://www.linkedin.com/in/abdulvaliy">
-                                    <img src="/images/icons/linkedin1.svg" width="22" />
+                                    <img src="/images/icons/linkedin1.svg" width="26" />
                                 </a>
                                 <a class="icon-telegram" target="_blank" href="https://t.me/lazyprogrammer1">
-                                    <img src="/images/icons/telegram.svg" width="22" />
+                                    <img src="/images/icons/telegram.svg" width="23" />
                                 </a>
                             </div>
                         </div>
