description changed in main

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                 align-self-start" src="/images/azimjon.jpg" alt="Abdulvaliy" />
                         <div class="about-detail anim-item">
                             <h1 class="title">Abdulvaliy Saidalikhonov</h1>
-                            <h3 class="desc">Cybersecurity specialist at Google</h3>
+                            <h3 class="desc">Future Cybersecurity specialist at Google</h3>
                             <div class="social-links flex
                                     align-items-center">
                                 <a class="icon-youtube" target="_blank" href="https://ww.youtube.com/@azim">
