--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="col-xl-8 col-lg-10 col-12 stagger-animation">
                     <div class="about flex align-items-center">
                         <img class="anim-item profile-picture
-                                align-self-start" src="/images/azimjon.jpg" alt="Abdulvaliy" />
+                                align-self-start" src="/images/abdulvaliy.jpg" alt="Abdulvaliy" />
                         <div class="about-detail anim-item">
                             <h1 class="title">Abdulvaliy Saidalikhonov</h1>
                             <h3 class="desc">Future Cybersecurity specialist at Google</h3>
