telegram channel link updated

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <!-- <li><a class="list-item" href="https://42.uz">42</a></li> -->
                 <li><a class="list-item" href="/blog/">Blog</a></li>
                 <li><a class="list-item" href="/talks/">Talks</a></li>
-                <li><a class="list-item" href="https://t.me/s/lazyprogrammer1" target="_blank">Channel</a></li>
+                <li><a class="list-item" href="https://t.me/s/iamabdulvaliy" target="_blank">Channel</a></li>
             </ul>
             <div class="burger-menu">
                 <div class="bar bar--top"></div>
@@ -69,7 +69,7 @@
                                 <a class="icon-linkedin" target="_blank" href="https://www.linkedin.com/in/abdulvaliy">
                                     <img src="/images/icons/linkedin1.svg" width="26" />
                                 </a>
-                                <a class="icon-telegram" target="_blank" href="https://t.me/lazyprogrammer1">
+                                <a class="icon-telegram" target="_blank" href="https://t.me/iamabdulvaliy">
                                     <img src="/images/icons/telegram.svg" width="23" />
                                 </a>
                             </div>
