--- a/About/index.html
+++ b/About/index.html
@@ -34,7 +34,7 @@
                 <!-- <li><a class="list-item" href="https://42.uz">42</a></li> -->
                 <li><a class="list-item" href="/blog/">Blog</a></li>
                 <li><a class="list-item" href="/talks/">Talks</a></li>
-                <li><a class="list-item" href="https://t.me/s/lazyprogrammer1" target="_blank">Channel</a></li>
+                <li><a class="list-item" href="https://t.me/s/iamabdulvaliy" target="_blank">Channel</a></li>
             </ul>
             <div class="burger-menu">
                 <div class="bar bar--top"></div>
